Change mobile number

--- a/index.html
+++ b/index.html
@@ -57,14 +57,13 @@
                 <div class="header__top">
                     <div class="container header-top__container">
                         <div class="header__contacts">
-                            <span class="header__phone"><a href="tel:+375172828222" class="phone__link">+375 (17) 282 82
-                                    22</a></span>
+                            <span class="header__phone"><a href="tel:+375293828255" class="phone__link">+375 (29) 382 82 55</a></span>
                             <span class="header__email"><a href="mailto:prime_ex@mail.ru"
                                     class="phone__link">prime_ex@mail.ru</a></span>
                         </div>
                         <ul class="header__social">
                             <li class="viber__logo">
-                                <a href="viber://chat?number=%2B375293822755">
+                                <a href="viber://chat?number=%2B375447442556">
                                     <svg width="29" height="27" viewBox="0 0 29 27" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path
@@ -4529,18 +4528,18 @@
                                     <li class="contacts__phones-service">
                                         <p>Отдел обслуживания клиентов</p>
                                         <ul>
-                                            <li><a href="tel:+375172828222" class="phone__link">+375 (17) 282 82 22</a>
-                                            </li>
-                                            <li><a href="tel:+375293822755" class="phone__link">+375 (29) 382 27 55</a>
+                                            <!-- <li><a href="tel:+375172828222" class="phone__link">+375 (17) 282 82 22</a>
+                                            </li> -->
+                                            <li><a href="tel:+375293822755" class="phone__link">+375 (29) 382 82 55</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li class="contacts__phones-sales">
                                         <p>Отдел продаж</p>
                                         <ul>
-                                            <li><a href="tel:+375173629547" class="phone__link">+375 (17) 362 95 47</a>
-                                            </li>
-                                            <li><a href="tel:+375293822755" class="phone__link">+375 (29) 382 27 55</a>
+                                            <!-- <li><a href="tel:+375173629547" class="phone__link">+375 (17) 362 95 47</a>
+                                            </li> -->
+                                            <li><a href="tel:+375293822755" class="phone__link">+375 (44) 744 25 56</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -4743,14 +4742,13 @@
                         <li><a href="#contacts">Контакты</a></li>
                     </ul>
                     <ul class="footer__contacts">
-                        <li><span class="footer__phone"><a href="tel:+375172828222" class="phone__link">+375 (17) 282 82
-                                    22</a></span></li>
+                        <li><span class="footer__phone"><a href="tel:375293828255" class="phone__link">+375 (29) 382 82 55</a></span></li>
                         <li><span class="footer__email"><a href="mailto:prime_ex@mail.ru"
                                     class="phone__link">prime_ex@mail.ru</a></span></li>
                         <li>
                             <ul class="footer__social">
                                 <li class="viber__logo">
-                                    <a href="viber://chat?number=%2B375293822755">
+                                    <a href="viber://chat?number=%2B375447442556">
                                         <svg width="29" height="27" viewBox="0 0 29 27" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path
